--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
   <hr>
-<a href="file:///D:/web%20development/html%20personal%20project/html%20personal%20project/my%20hobbies.html">my hobbies</a><br>
+<a href="file:///D:/web%20development/html%20personal%20project/html%20personal%20project/my%20hobbies.html">My Hobbies</a><br>
 <a href="file:///D:/web%20development/html%20personal%20project/html%20personal%20project/contact%20me.html">Contact me</a>
 </body>
 
